k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lsystemsed
  namespace: lsystemsed
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: lsystemsed
  template:
    metadata:
      labels:
        app: lsystemsed
    spec:
      containers:
        - name: lsystemsed
          image: ghcr.io/mikemoraned/lsystemsed:2.0.0
          resources:
            requests:
              memory: 400Mi
            limits:
              memory: 1Gi
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 60
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 120
            timeoutSeconds: 1
